--- a/tripal_blast.info.yml
+++ b/tripal_blast.info.yml
@@ -1,9 +1,7 @@
 name: 'Tripal BLAST (Basic Local Alignment Search Tool)'
 type: module
 description: 'Provides a user interface to allow your users to utilize NCBI BLAST+ on your server'
-core_version_requirement: ^9.2 || ^10
+core_version_requirement: ^10
 package: 'Tripal Extensions'
 project: tripal_blast
 configure: tripal_blast.configuration
-dependencies:
-  - libraries:libraries
