--- a/.github/workflows/ALL-PHPUnit.yml
+++ b/.github/workflows/ALL-PHPUnit.yml
@@ -14,27 +14,37 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - "8.0"
           - "8.1"
+          - "8.2"
+          - "8.3"
         pgsql-version:
           - "13"
+          - "16"
         drupal-version:
-          - "9.3.x-dev"
-          - "9.4.x-dev"
-          - "9.5.x-dev"
-          # - "10.0.x-dev"
-#        exclude:
-#          - php-version: "8.0"
-#            pgsql-version: "13"
-#            drupal-version: "10.0.x-dev"
+          - "10.0.x-dev"
+          - "10.1.x-dev"
+          - "10.2.x-dev"
+        exclude:
+          - php-version: "8.3"
+            pgsql-version: "13"
+            drupal-version: "10.0.x-dev"
+          - php-version: "8.3"
+            pgsql-version: "13"
+            drupal-version: "10.1.x-dev"
+          - php-version: "8.3"
+            pgsql-version: "16"
+            drupal-version: "10.0.x-dev"
+          - php-version: "8.3"
+            pgsql-version: "16"
+            drupal-version: "10.1.x-dev"
 
     steps:
       # Check out the repo
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       # Here we pull the development tripaldocker image for this combo in our matrix
       - name: Run Automated testing
-        uses: tripal/test-tripal-action@v1.0
+        uses: tripal/test-tripal-action@v1.5
         with:
           directory-name: $PKG_NAME
           modules: $MODULES
