--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,36 +1,25 @@
-version: "2"
-
+version: "2"         # required to adjust maintainability checks
 checks:
   argument-count:
-    enabled: false
     config:
       threshold: 8
   complex-logic:
-    enabled: true
     config:
       threshold: 4
   file-lines:
-    enabled: false
     config:
       threshold: 250
   method-complexity:
-    enabled: true
     config:
       threshold: 25
   method-count:
     enabled: false
-    config:
-      threshold: 20
   method-lines:
     enabled: false
-    config:
-      threshold: 25
   nested-control-flow:
-    enabled: true
     config:
       threshold: 6
   return-statements:
-    enabled: true
     config:
       threshold: 6
   similar-code:
@@ -39,12 +28,12 @@ checks:
     enabled: false
 
 exclude_patterns:
+- ".github/"
 - "**/config/"
 - "**/css/"
-- "**/js/jquery-*.js",
 - "**/images/"
+- "**/js/"
 - "**/tests/"
-- "**/docs/"
 - "**/*.yml"
 - "**/*.yaml"
 - "**/*.md"
@@ -54,4 +43,3 @@ exclude_patterns:
 - "composer.lock"
 - ".gitignore"
 - "Dockerfile"
-- ".github/"
